--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lucide-react": "^0.562.0",
     "@google/genai": "^1.35.0",
     "idb": "^8.0.0",
+    "@supabase/supabase-js": "^2.39.0",
     "react-dom": "^19.2.3",
     "react": "^19.2.3"
   },
