--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "smart-pos",
   "private": true,
@@ -14,6 +15,7 @@
     "lucide-react": "^0.344.0",
     "@google/genai": "*",
     "idb": "^8.0.0",
+    "@supabase/supabase-js": "^2.39.0",
     "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.0"
   },
