--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "smart-pos",
   "private": true,
@@ -17,7 +16,8 @@
     "idb": "^8.0.0",
     "@supabase/supabase-js": "^2.39.0",
     "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.0",
+    "html2canvas": "^1.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
