--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
+    "@types/html2canvas": "^1.0.0",
     "typescript": "^5.4.2",
     "vite": "^5.1.6",
     "autoprefixer": "^10.4.18",
