--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "lucide-react": "^0.473.0",
-    "@google/genai": "*",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "lucide-react": "0.474.0",
+    "@google/genai": "^1.3.0",
     "idb": "^8.0.0",
-    "@supabase/supabase-js": "^2.39.0",
+    "@supabase/supabase-js": "^2.47.10",
     "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.0",
     "html2canvas": "^1.4.1",
@@ -24,12 +24,12 @@
   "devDependencies": {
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "@types/html2canvas": "^1.0.0",
-    "typescript": "^5.4.2",
-    "vite": "^5.1.6",
-    "autoprefixer": "^10.4.18",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1"
+    "typescript": "^5.7.3",
+    "vite": "^6.0.11",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17"
   }
 }
