--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "smart-pos",
   "private": true,
@@ -18,13 +19,13 @@
     "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.0",
     "html2canvas": "^1.4.1",
-    "jszip": "^3.10.1"
+    "jszip": "^3.10.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.4",
-    "@types/html2canvas": "^1.0.0",
     "typescript": "^5.7.3",
     "vite": "^6.0.11",
     "autoprefixer": "^10.4.20",
